--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/socket.io-client": "^1.4.36",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   }
 }
